--- a/style.css
+++ b/style.css
@@ -4,26 +4,26 @@ body{
 #flick {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.322);
-    width: 100%;
+    /* width: 100%; */
     z-index: 2;
     height: 60px;
 }
-.wall {
-    position: relative;
-    left: -80px;
-}
+
 #watch {
     width: 80px;
 }
 .group {
-    transform: translateX(30px);
+    transform: translateX(15px);
+    transform: translateY(-30px);
 }
 #bolu {
     border: none;
     width: 700px;
+    background-color: whitesmoke;
+    opacity: 0.5;
 }
 #log {
-    padding-left: 80px;
+    padding-left: 50px;
 } 
 .sweet {
     position: relative;
@@ -34,8 +34,8 @@ body{
 }
 .girl {
     position: absolute;
-    bottom: 200px;
-    left: 30%;
+    bottom: 180px;
+    left: 28%;
     color: white;
     z-index: 100;
     text-align: center;
@@ -52,6 +52,7 @@ body{
     position: absolute;
     /* margin-top: 20px; */
     transform: translate(-80px,5px);
+
 }
 .power:hover {
     text-decoration: underline;
@@ -140,14 +141,14 @@ footer a:hover {
 .rug {
     transform: translate(150px,20px);
 }
-.smug {
-    margin-left: 20px;  
+.connect {
+    display: none;
 }
-#nine {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
+.sweet{
+    z-index: 1;
+}
+#dropDownContent{
+    z-index: 200 !important;
 }
 
 
