--- a/phone.css
+++ b/phone.css
@@ -1,5 +1,4 @@
 @media screen and  (max-width :478px) {
-
     .group {
      display: none;
     }
@@ -12,9 +11,8 @@
     .find {
         transform: translateX(-55px);
     }
-    #nine a {
-        border-bottom: 1px solid rgb(69,64,64);
-        width: 100%;
+    .high{
+        width: 200%;
     }
     #data {
         transform: translateX(-450px);
@@ -65,7 +63,7 @@
          top: 0;
          z-index: 2;
          background-color: rgba(0, 0, 0, 0.322);
-         width: 100%;
+         width: 100vh;
          height: 60px;
      }
      .member {
@@ -82,22 +80,28 @@
         display: none;
     
     }
+
+    #blog{
+    color: black;
+    }
     .mug{
-       padding: 30px 100px 0px;
+       padding: 30px 120px 0px;
     }
     .port {
         display: flex;
+    }
+    #help{
+        margin-top: 10px;
     }
 
     .sign {
         position: absolute;
         width: 100%;
-        height: 162%;
+        height: 100%;
         background-color: white;
         transform: translate(130px,0px);
         padding-top: 60px;
-
-        margin: 0;
+        margin: 0px 0px 0px 60px;
     }
     .loyal {
         font-size: 30px;
@@ -119,7 +123,8 @@
         display: none;
     }
     #two {
-        margin-left: 250px;
+    margin-top: 10px;
+    margin-left: 250px;
     }
     #two a li {
         color: black;
@@ -158,7 +163,7 @@
         margin: 0px !important;
      }
      #temi {
-        max-width: 100%;
+        width: 170%;
      }
      .good {
         padding: 0px !important;
@@ -169,16 +174,9 @@
     .rug {
     transform: translate(120px,20px);
     } 
-    #nine {
-        margin-right: 50px;
-        display: flex;
-        flex-direction: column;
-        background-color: black;
-        justify-content: space-between;
-        height: 100%;
-        margin-left: -280px;
-    
-
-    } 
+    #sky{
+        height: 765px;
+    }
+  
     }
 
