--- a/phone.css
+++ b/phone.css
@@ -66,7 +66,11 @@
          width: 100vh;
          height: 60px;
      }
-     .member {
+    input:focus{
+        box-shadow: none !important;
+        border: none;
+    }
+    .member {
         font-size: 25px;
     }
     .cat {
